2009-12-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (undefine_command):
	'undefine  A* B' should not affect BFOO.
	Bugfix.

2009-12-04  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* config/makefile.mgw config/makefile.cyg:  Create installation
	directories $(DESTDIR)/$(GNUPLOT_PS_DIR) $(DESTDIR)/$(GNUPLOT_LUA_DIR)

2009-12-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_open): The variables that track matrix and binary
	data input (df_matrix, df_num_bin_records) must be re-inititialized
	for every file.

2009-12-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_margin): Limit range of set ?margin at screen <foo>
	to 0 < foo < 1.

	* src/datafile.c (f_stringcolumn) src/plot2d.c (eval_plots):
	Enforce restrictions on which plot types can accept matrix data.

2009-12-01  Ethan A Merritt  <merritt@u.washington.edu>

	* config/makefile.cyg config/makefile.dj2 config/makefile.mgw
	config/makefile.os2 src/Makefile.am term/lua.trm term/Makefile.am.in:
	Install the script gnuplot-tikz.lua under $pkgdatadir rather than under
	$pkglibexecdir.
	Fixes build problems under cygwin and mingw.
	Thanks to Tatsuro Matsuoka.

	* docs/gnuplot.doc:  Provide an example of using 'set palette defined'
	to approximate default MATLAB coloring.
	Thanks to Mike <mws115@usa.com>

2009-11-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  Remove unused global df_binary.

2009-11-16  Juergen Wieferink  <wieferink@freenet.de>

	* src/command.c (do_string_and_free) src/misc.c (load_file): Fix memory
	issues of patch 2009-10-30 (SF Patch #2898455 and Bug #2895620).

2009-11-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Fix support web page URL.

	* src/show.c (show_version): Less info help lines.

2009-11-14  Philipp K. Janert <janert@ieee.org>

	* src/command.c (undefine_command): Added support for wildcards in
	variable names.

	* docs/gnuplot.doc: Associated documentation.
